# turbine-predictive-maintenance

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_load_eda.ipynb  02_etl.ipynb  02_etl_feature_engineering.ipynb  03_train_evaluate_model.ipynb
src/: config.py  database.py  engineer_features.py  evaluation.py  feature_engineering.py  load_data.py  modeling.py  modelling.py  run_pipeline.py  streamlit_dashboard.py
