[project]
name = "turbine-predictive-maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optimizer>=0.1.0",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn==1.7.2",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "xgboost>=3.3.0",
]
